# righor

./: .gitignore  Cargo.toml  Examples.ipynb  Examples.py  README.md  TODO.md  UPLOAD.md  Untitled.ipynb  pyproject.toml
.github/workflows/: CI.yml
demo/: Examples.ipynb
demo/models/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv  model_parms.txt
demo/models/human/tcr_beta/models/: model_parms.txt
demo/models/human/tcr_beta/ref_genome/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv
demo/models/test/tcr_beta/models/: model_marginals.txt  model_parms.txt
demo/models/test/tcr_beta/ref_genome/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv
demo/models/test_simple/tcr_beta/models/: model_marginals.txt  model_parms.txt
demo/models/test_simple/tcr_beta/ref_genome/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv
python/ihor/: __init__.py
python/righor/: __init__.py  utils.py
righor.data/data/righor_models/: models.json
righor.data/data/righor_models/human/b_heavy/tmp1/: model_params.txt
righor.data/data/righor_models/human/t_beta/tmp1/: model_params.txt
righor.data/data/righor_models/mouse/t_beta/: V_gene_CDR3_anchors.csv
src/: feature.rs  inference.rs  lib.rs  main.rs  model.rs  parser.rs  py_binding.rs  sequence.rs  utils.rs  utils_sequences.rs
src/sequence/: mod.rs  sequence.rs  utils.rs
src/shared/: alignment.rs  amino_acids.rs  data_structures.rs  distributions.rs  entry_sequence.rs  errors.rs  event.rs  feature.rs  gene.rs  likelihood.rs  markov_chain.rs  mod.rs  model.rs  parameters.rs  parser.rs  py_binding.rs  sequence.rs  utils.rs
src/v_dj/: feature.rs  inference.rs  mod.rs
src/vdj/: event.rs  feature.rs  inference.rs  mod.rs  model.rs  py_bindings.rs  sequence.rs
src/vj/: event.rs  inference.rs  mod.rs  model.rs  py_bindings.rs  sequence.rs
tests/: amino_acids.rs  evaluate_test_vdj.rs  generation_test.rs  inference_test.rs  inference_test_vdj.rs
tests/common/: mod.rs
tests/models/: seq_onegene.txt
tests/models/onegene/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv  model_marginals.txt  model_params.txt
