[package]
name = "ihor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ihor"
crate-type = ["cdylib"]

[profile.release]
debug = true
[profile.bench]
debug = true


[dependencies]
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr = "0.4.0"
phf = { version = "0.10", features = ["macros"] }
regex = "1.9"
ndarray = "0.15"
csv = "1.1"
enum_dispatch = "0.3"
pyo3 = {version = "0.20.0", features = ["extension-module", "anyhow"]}
ndarray-linalg = {version = "0.14", features = ["openblas"]}
duplicate = {version = "1.0.0"}
bio = "1.5"
indicatif = "0.17.7"
approx_eq = "0.1.8"
itertools = "0.10.0"
numpy = "0.20"
anyhow = "1.0.76"
