[package]
name = "righor"
version = "0.2.91"
edition = "2021"
license = "MIT"
repository = "https://github.com/Thopic/righor"
description = "Righor creates model of Ig/TCR sequences from sequencing data."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]
name = "righor"
path = "src/lib.rs"

[profile.release] # Not a ton of worthwhile optimization honestly
debug = true
opt-level = 3


[dependencies]
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr = "0.4.0"
phf = { version = "0.10", features = ["macros"] }
regex = "1.9"
ndarray = {version="0.16.1", features = ["approx", "serde"]}
csv = "1.1"
enum_dispatch = "0.3"
pyo3 = {version = "0.22", features = ["extension-module", "anyhow", "multiple-pymethods"], optional=true}
# ndarray-linalg = {version = "0.14", features = ["openblas"]}
duplicate = {version = "1.0.0"}
bio = "1.5"
approx_eq = "0.1.8"
itertools = "0.10.0"
numpy = {version = "0.22.1", optional=true}
anyhow = "1.0.76"
wasm-bindgen = "0.2.88"
getrandom = { version = "0.2", features = ["js"] }
fast-math = "0.1"
rayon = "1.8.1"
kdam = { version = "0.6.1", features = ["rayon"], optional=true }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
dyn-clone = "1.0.17"
memoize = "0.4.2"
cfg-if = "1.0"
nalgebra = {version = "0.32.6"}
nohash-hasher = "0.2"
log = { version = "0.4", optional=true}

[features]
default = ["kdam"]
py_binds = ["numpy", "pyo3", "log", "kdam/notebook"]
