[build-system]
requires = ["maturin>=1.0,<2.0","setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "maturin"

[project]
name = "righor"
# version = "0.2.9" ## Also need to update the cargo.toml version (not needed anymore ?)
require-python = ">=3.9,<=3.12"
dependencies = [
    "seaborn",
    "matplotlib",
    "tqdm",
    "numpy"
]

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module", "py_binds"]
python-source = "python"
module-name = "righor._righor"
data = "righor.data/"
